ubiquity (0.99.79) UNRELEASED; urgency=low

  * Defend against progress_title being None in debconf_progress_start
    (closes: Malone #44219).
  * Add Brazilian Portuguese .desktop file translation from Malone #39064.
  * Make translations of "How do you want to partition the disk?" work.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 11 May 2006 21:33:28 +0100

ubiquity (0.99.78) dapper; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Fix application of Pango attributes to non-ASCII strings (closes:
      Malone #41769).
  * Internationalise .desktop files (closes: Malone #39064).
  * Filter out base-installer/* from our templates file; saves 350KB.
  * Only load translations for the current language (plus those translations
    needed immediately on the language page), to save memory.
  * Fix Unicode decoding crash on substituted values in summary component
    (closes: Malone #43867).
  * Log our own version number to /var/log/installer/syslog and
    /var/log/installer/version on startup. Save /var/log/installer/version
    to installed system.
  * Speed up building of subsidiary source packages by running 'debian/rules
    binary' in one go rather than binary-arch and binary-indep separately.
  * Fix hw-detect not to try to write to non-existent prebaseconfig script.
  * Change text on summary page to "Your new operating system will now be
    installed with the following settings:" (closes: Malone #42618).
  * Change "Quit" button to "Continue using the live CD" and "Reboot the
    computer" to "Restart now" (closes: Malone #37605).

  * Remove piles of obsolete screenshots and locale files from the source
    package and ubiquity-ubuntu-doc.
  * Merge ubiquity-ubuntu-doc into ubiquity-ubuntu-artwork (and likewise
    move the commented-out pieces of ubiquity-guadalinex-doc into
    ubiquity-guadalinex-artwork). Both are always required, so there's no
    point in them being separate.

  * Update all translations from Rosetta.