@@ -4,6 +4,8 @@ ubiquity (0.99.79) UNRELEASED; urgency=low
     (closes: Malone #44219).
   * Add Brazilian Portuguese .desktop file translation from Malone #39064.
   * Make translations of "How do you want to partition the disk?" work.
+  * Add support for getting translations from debconf questions other than
+    ubiquity/text/*, including "New partition size:".
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 11 May 2006 21:33:28 +0100
 
